Experimented with footers

--- a/layouts/partials/paige/site-footer.html
+++ b/layouts/partials/paige/site-footer.html
@@ -1,3 +1,2 @@
-<span>
-	This is OUR footer.
-</span>
+<!-- Removes pre-defined default Paige footer -->
+<!-- NOTE: Remove this file and the folder it's in if switching to a different theme -->
