We'll just override the Paige footer. Skeleton done.

--- a/layouts/partials/paige/site-footer.html
+++ b/layouts/partials/paige/site-footer.html
@@ -1,2 +1,6 @@
 <!-- Removes pre-defined default Paige footer -->
 <!-- NOTE: Remove this file and the folder it's in if switching to a different theme -->
+
+<div style="text-align: center;">
+	Temporary footer
+</div>
